@@ -130,7 +130,7 @@ public class LunamediaBidder implements Bidder<BidRequest> {
             final List<Format> formatSkipFirst = originalFormat.subList(1, originalFormat.size());
             bannerBuilder.format(formatSkipFirst);
 
-            final Format firstFormat = originalFormat.get(0);
+            final Format firstFormat = originalFormat.getFirst();
             bannerBuilder.w(firstFormat.getW());
             bannerBuilder.h(firstFormat.getH());
 
