@@ -12,14 +12,13 @@ public class AccountActivityRuleConfigResolver {
 
     private static final List<AccountActivityRuleConfigMatcher> MATCHERS = List.of(
             new AccountActivityPrivacyModulesRuleConfigMatcher(),
-            new AccountActivityGeoRuleConfigMatcher(),
             new AccountActivityDefaultRuleConfigMatcher());
 
     public static Class<? extends AccountActivityRuleConfig> resolve(JsonNode ruleNode) {
         return MATCHERS.stream()
                 .filter(matcher -> matcher.matches(ruleNode))
                 .findFirst()
-                .orElseGet(() -> MATCHERS.get(MATCHERS.size() - 1))
+                .orElse(MATCHERS.getLast())
                 .type();
     }
 }
