@@ -345,8 +345,8 @@ public class ImprovedigitalBidderTest extends VertxTest {
         // then
         assertThat(result.getErrors()).hasSize(0);
         assertThat(result.getValue()).isNotEmpty();
-        assertThat(result.getValue().get(0).getBid().getMtype()).isEqualTo(expectedMType);
-        assertThat(result.getValue().get(0).getType()).isEqualTo(expectedType);
+        assertThat(result.getValue().getFirst().getBid().getMtype()).isEqualTo(expectedMType);
+        assertThat(result.getValue().getFirst().getType()).isEqualTo(expectedType);
     }
 
     @Test
@@ -433,7 +433,7 @@ public class ImprovedigitalBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).isEmpty();
-        assertThat(result.getValue().get(0).getType()).isEqualTo(banner);
+        assertThat(result.getValue().getFirst().getType()).isEqualTo(banner);
     }
 
     @Test
